change research content and add guatemala photo

--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
 
       <div class="row featurette">
         <div class="col-md-5 col-md-push-3">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">TITLE<span class="text-muted"></span></h2>
+          <p class="lead">od semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-3 col-md-pull-9">
           <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
@@ -204,11 +204,12 @@
 
       <div class="row featurette">
         <div class="col-md-5 col-md-offset-1">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Structural controls on the Joaquina geothermal system, central Guatemala<span class="text-muted"></span></h2>
+          <br>
+          <p class="lead">Project Summary</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img style="height:240px;border-radius:10%;margin-top:30px;" class="featurette-image img-responsive center-block" src="assets/img/portfolio/guatemala.png" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -283,7 +284,8 @@
 
 
     <script>
-// Portfolio
+// 
+
 (function($) {
   "use strict";
   var $container = $('.portfolio'),
