change cv pdf location

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div id="h">
       <div class="logo">
-        <h2><a href="http://www.eps.mcgill.ca/~melosh/melosh/Contact_and_CV_files/CV.pdf">CV</a></h2>
+        <h2><a href="./assets/pdf/CV.pdf">CV</a></h2>
       </div><!--/logo-->
       <div class="container centered">
         <div class="row">
@@ -77,9 +77,9 @@
     <div class="container ptb">
       <div class="row">
         <h2 class="centered mb">I compliment a strong background in structural field mapping with an extensive, computer-based, data analysis and management skill set.</h2>
-        <div class="col-md-5">
+        <div class="col-md-12">
           <h4>Areas of Expertise</h4>
-            <ul style="font-size:1em;" class="col-md-6 col-md-offset-1">
+            <ul style="font-size:1.3em;" class="col-md-6 col-md-offset-1">
               <li>Fault rock geology</li>
               <li>Active tectonics</li>
               <li>Seismic cycling in the 
@@ -91,16 +91,16 @@
           </ul>
         </div><!--/col-md-6-->
         <div class="col-md-7">
-          <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software.</p>
+          <p></p>
         </div><!--/col-md-6-->
       </div><!--/row-->
     </div><!-- /.container -->
 <!--     <div class="container ">
  -->      <div class="row">
         <div class="col-md-12">
-          <img style="width:2000px;height:370px;" src="assets/img/rock.png" class="img-responsive" alt="">
+          <img style="width:100%;" src="assets/img/rock.png" class="img-responsive" alt="">
           <p style="margin-left:10px;margin-top:-160px;font-size:70px;color:white;">Research</p>
-          <figcaption style="margin-top:140px;"><i>Figure Above: Identifying overprinted pseudotachylyte</i></figcaption>
+          <figcaption style="margin-top:140px;"><i>Figure Above: Cathodeluminecense image of mylonitized pseudotachylyte.</i></figcaption>
         </div>
       </div><!--/row-->
 <!--     </div>
@@ -110,7 +110,7 @@
         <div class="row centered">
           <h2>Check out some of my latest research.</h2>
           <div style="text-align:justify;" class="col-md-8 col-md-offset-2">
-            <p>I study the geology of rock deformation in faults and shear zones. My work focuses on the structural evolution of ancient continental-scale shear zones, fluid flow and stress transfer across rheological boundaries in the middle crust (Melosh et al., in final prep.), coseismic deformation mechanisms (Melosh et al., 2014) and the influence of aseismic processes on earthquake rupture. <br/><br>I am also interested active margins using the earth surface as a strain marker to inform fault slip and fold growth processes (Melosh and Keller, 2013). I have experience working with structurally controlled magmatic systems in active transtensional (Busby et al., 2013) and transpressive settings. I complement this with industry experience in understanding the structural controls on fluid flow in active geothermal systems (e.g. Libbey et al., 2015). </p>
+            <p>I study the geology of rock deformation in faults and shear zones. My work focuses on the structural evolution of ancient continental-scale shear zones, fluid flow and stress transfer across rheological boundaries in the middle crust (Melosh et al., 2016; Melosh et al., in final prep.), coseismic deformation mechanisms (Melosh et al., 2014) and the influence of aseismic processes on earthquake rupture. <br/><br>I am also interested active margins using the earth surface as a strain marker to inform fault slip and fold growth processes (Melosh and Keller, 2013). I have experience working with structurally controlled magmatic systems in active transtensional (Busby et al., 2013) and transpressive settings. I complement this with industry experience in understanding the structural controls on fluid flow in active geothermal systems (e.g. Libbey et al., 2015). </p>
 
           </div><!--/col-md-8-->
         </div><!--/row-->
@@ -264,7 +264,8 @@
             <a href="#"><i class="ion-social-instagram"></i></a>
             <a href="https://scholar.google.com/citations?user=k6HaZgoAAAAJ&hl=en"><i class="ion-social-google-outline"></i></a>
           </div><!--/col-md-8-->
-                  <a href="#">Contact me at ben.melosh@gmail.com</i></a>
+                  <a href="#">Contact me at benmelosh@gmail.com</i></a>
+                  <a href="#">bmelosh@usgs.gov</i></a>
 
         </div>
       </div><!--/container-->
