--- a/research.html
+++ b/research.html
@@ -181,7 +181,7 @@
 <!--       </div>
  -->      <!--/container--> 
 
-    <div style="background-color:lightgray;" id="sep">
+    <div style="background-color:rgba(0,0,0,0.2);" id="sep">
       <div  class="container">
         <div class="row centered">
           <div class="col-md-8 col-md-offset-2">
