--- a/research.html
+++ b/research.html
@@ -74,7 +74,7 @@
 
       <div class="row featurette">
         <div class="col-md-5 col-md-offset-1">
-          <h2 class="featurette-heading">Seismic cycling in the brittle-plastic transition of a transform boundary<br><br><span class="text-muted"></span></h2>
+          <h2 class="featurette-heading"><a name="EarthquakeGeology"> Seismic cycling in the brittle-plastic transition of a transform boundary</a><br><br><span class="text-muted"></span></h2>
           <p class="lead"><i>Pofadder Shear Zone, Namibia and South Africa</i></p>
              <p class="lead">Summary</p>
 
@@ -146,7 +146,7 @@
             <img style="height:240px;margin-top:30px;" class="featurette-image img-responsive center-block" src="assets/img/portfolio/guatemala.png" alt="Generic placeholder image">
         </div>
         <div class="col-md-5">
-        <h2 class="featurette-heading">Structural controls on the Joaquina geothermal system, central Guatemala<span class="text-muted"></span></h2>
+        <h2 class="featurette-heading"><a name="Geothermal"> Structural controls on the Joaquina geothermal system, central Guatemala</a><span class="text-muted"></span></h2>
           <br>
           <p class="lead">Project Summary</p>
         </div>
