updates to the index page

--- a/publications.html
+++ b/publications.html
@@ -49,6 +49,18 @@
 	div.transbox { background-color: #ffffff; opacity: 0.6; filter: alpha(opacity=60); }
 
 
+    .btn {
+    background-color: gray;
+    font-size: 20px;
+    color: #ffffff;
+    outline: none;
+}
+  .btn-conf:hover {
+    background: #33a6cc;
+    color:#ffffff
+  }
+
+
 
 
 </style>
