--- a/research.html
+++ b/research.html
@@ -38,6 +38,18 @@
     margin:10px;
     vertical-align: middle;
 }
+
+  .btn {
+    background-color: gray;
+    font-size: 20px;
+    color: #ffffff;
+}
+  .btn-conf:hover {
+    background: #33a6cc;
+    color:#ffffff;
+    outline: none;
+  }
+
 </style>
   </head>
 
