--- a/publications.html
+++ b/publications.html
@@ -68,8 +68,15 @@
 
 <body>
 
-
-
+<div class="container" > 
+<p><a href="https://scholar.google.com/citations?user=k6HaZgoAAAAJ&hl=en" style="font-size:35px"><strong>Publications</strong></a></p><br>
+<p><b>Melosh, B.L.</b>, Rowe, C.D., Gerbi, C., Bate, C.E., Shulman, D., 2016, The spin zone: Transient mid-crust permeability caused by coseismic brecciation, Journal of Structural Geology 87, 47-63</p><br>
+<p>Busby, C.J., Andrews, G.D.M, Koerner, A.A, Brown, S.R., <b>Melosh, B.L.</b>, Hagan, J.C., 2016, Progressive derangement of ancient (Mesozoic) east-west Nevadaplano paleochannels into modern (Miocene–Holocene) north-northwest trends in the Walker Lane Belt, central Sierra Nevada, Geosphere 12 (1), 135-175</p><br>
+<p>Libbey, R.B., Williams-Jones, A.E., <b>Melosh, B.L.</b>, Backeberg, N.R., 2015, Characterization of geothermal activity along the North American–Caribbean Plate boundary in Guatemala: The Joaquina geothermal field, Geothermics 56, 17-34</p><br>
+<p><b>Melosh, B.L.</b>, Rowe, C.D., Smit, L., Groenewald, C., Lambert, C.W., Macey, P., 2014, Snap, Crackle, Pop: Dilational fault breccias record seismic slip below the brittle-plastic transition, Earth and Planetary Science Letters 403, 432-445</p><br>
+<p><b>Melosh, B.L.</b>, Keller, E.A., 2013, Effects of active folding and reverse faulting on stream channel evolution, Santa Barbara Fold Belt, California, Geomorphology 186, 119-135</p><br>
+<p>Busby, C.J., Koerner, A.A., <b>Melosh, B.L.</b>, Hagan, J.C., Andrews, G.D.M., 2013, Sierra crest graben-vent system: A Walker Lane pull apart within the ancestral Cascades arc, Geosphere 9 (4), 736-780</p>
+</div>
 
 
 
@@ -84,8 +91,8 @@
       <div  class="container">
         <div class="row centered">
           <div class="col-md-8 col-md-offset-2">
-            <h1>Under Construction</h1>
-            <br>
+            <h1></h1>
+          
             <button class="btn btn-conf btn-clear"><a href="mailto:bmelosh@usgs.gov?Subject=Potential%20Collaboration" target="_top">Let's Collaborate</a></button>
           </div>
         </div><!--/row-->
