--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-43404522-1', 'auto');
+  ga('send', 'pageview');
+
+	</script>
+
+
+
+
 <style>
     .clients img {
     max-width: 400px;
@@ -93,6 +108,7 @@
 
 <div id="h">
 
+
   <div class="dropdown" style="font-size:35px; color:black">
       	<span><strong>Research</span>
       	<div class="dropdown-content">
@@ -103,6 +119,7 @@
       		<p><a href="https://www.usgs.gov/news/news-releases" target="_blank">USGS News</p></a>
       	</div>
   </div>
+ 
 
     <div class="dropdown" style="font-size:35px; color:black">
       	<span><strong>More</span>
