--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
 
   <body>
 
+    <audio controls autoplay>
+  <source src="assets/ryanjam.mp3" type="audio/ogg">
+  </audio>
+
 <div id="h">
 
 <div class="container">
