--- a/research.html
+++ b/research.html
@@ -53,6 +53,10 @@
 </style>
   </head>
 
+  <audio controls autoplay>
+  <source src="assets/ryanjam.mp3" type="audio/ogg">
+  </audio>
+
   <body>
 
 
