--- a/publications.html
+++ b/publications.html
@@ -65,6 +65,11 @@
 
 
 </style>
+
+ <audio controls autoplay>
+  <source src="assets/ryanjam.mp3" type="audio/ogg">
+  </audio>
+
 </head>
 
 <body>
