--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
 
 
-        <img style="height:100px;margin-top:30px;margin-bottom:-110px" src="assets/img/USGS_logo_green.svg" alt="Generic placeholder image">
+        <!--<img style="height:100px;margin-top:30px;margin-bottom:-110px" src="assets/img/USGS_logo_green.svg" alt="Generic placeholder image">
       </div><!--/container-->
 
     </div><!--/.sep-->
