--- a/flowstress.html
+++ b/flowstress.html
@@ -94,7 +94,7 @@
    <div class="row">
         <div class="col-md-12">
           <img style="width:100%;" src="assets/img/ebsd.png" class="img-responsive" alt="">
-          <figcaption style="margin-top:10px"><i>Figure Above: Electron backscatter detection map from a Pofadder Shear Zone mylonite. Pink color are quartz c-axes pointing at you!.</i></figcaption>
+          <figcaption style="margin-top:10px"><i>Figure Above: Electron backscatter detection map from a Pofadder Shear Zone mylonite. Pink color are quartz c-axes pointing at you!</i></figcaption>
         </div>
       </div><!--/row-->
 
