updates to audio

--- a/flowstress.html
+++ b/flowstress.html
@@ -54,7 +54,7 @@
 </style>
   </head>
 
-  <audio controls autoplay loop autostart="0">
+  <audio controls>
   
   <source src="assets/ryanjam.mp3" type="audio/ogg">
   </audio>
