--- a/publications.html
+++ b/publications.html
@@ -78,9 +78,9 @@
 
 <p><a href="https://scholar.google.com/citations?user=k6HaZgoAAAAJ&hl=en" style="font-size:35px"><strong>Publications</strong></a></p><br>
 <div class="mypublist">
-  <p><a href="https://www.sciencedirect.com/science/article/pii/S0191814118301950" target="_blank"><b>Melosh, B.L.</b>, Rowe, C.D., Gerbi, C., Smit, L., Macey, P., 2018, Seismic cycle feedbacks in a mid-crustal shear zone, Journal of Structural Geology 112, 95-111</a></p><br>
+<p><a href="https://www.sciencedirect.com/science/article/pii/S0191814118301950" target="_blank"><b>Melosh, B.L.</b>, Rowe, C.D., Gerbi, C., Smit, L., Macey, P., 2018, Seismic cycle feedbacks in a mid-crustal shear zone, Journal of Structural Geology 112, 95-111</a></p><br>
 <p><a href="https://doi.org/10.1130/GES01398.1" target="_blank">Cathy J Busby, K Putirka, <b>Melosh, B.L.</b>, Paul R Renne, Jeanette C Hagan, Megan Gambs, Catherine Wesoloski, 2018, A tale of two Walker Lane pull-apart basins in the ancestral Cascades arc, central Sierra Nevada, California, Geosphere </a></p><br>
-<p><a href="http://www.sciencedirect.com/science/article/pii/S0191814116300360" target="_blank">Rupert Sutherland, John Townend, Virginia Toy, and science team, 2017, Extreme hydrothermal conditions at an active plate-bounding fault, Nature 546 (7656), 137</a></p><br>
+<p><a href="http://www.sciencedirect.com/science/article/pii/S0191814116300360" target="_blank">Rupert Sutherland, John Townend, Virginia Toy, and <b>science team</b>, 2017, Extreme hydrothermal conditions at an active plate-bounding fault, Nature 546 (7656), 137</a></p><br>
 <p><a href="http://www.sciencedirect.com/science/article/pii/S0191814116300360" target="_blank"><b>Melosh, B.L.</b>, Rowe, C.D., Gerbi, C., Bate, C.E., Shulman, D., 2016, The spin zone: Transient mid-crust permeability caused by coseismic brecciation, Journal of Structural Geology 87, 47-63</a></p><br>
 <p><a href="http://geosphere.gsapubs.org/content/12/1/135.abstract?rss=1" target="_blank"> Busby, C.J., Andrews, G.D.M, Koerner, A.A, Brown, S.R., <b>Melosh, B.L.</b>, Hagan, J.C., 2016, Progressive derangement of ancient (Mesozoic) east-west Nevadaplano paleochannels into modern (Miocene–Holocene) north-northwest trends in the Walker Lane Belt, central Sierra Nevada, Geosphere 12 (1), 135-175</a></p><br>
 <p><a href="http://www.sciencedirect.com/science/article/pii/S0375650515000334" target="_blank"> Libbey, R.B., Williams-Jones, A.E., <b>Melosh, B.L.</b>, Backeberg, N.R., 2015, Characterization of geothermal activity along the North American–Caribbean Plate boundary in Guatemala: The Joaquina geothermal field, Geothermics 56, 17-34</a></p><br>
@@ -89,15 +89,6 @@
 <p><a href="http://geosphere.gsapubs.org/content/9/4/736.abstract" target="_blank"> Busby, C.J., Koerner, A.A., <b>Melosh, B.L.</b>, Hagan, J.C., Andrews, G.D.M., 2013, Sierra crest graben-vent system: A Walker Lane pull apart within the ancestral Cascades arc, Geosphere 9 (4), 736-780</a></p>
 </div>
 </div>
-
-
-
-
-
-
-
-
-
 
     <div style="background-color:rgba(0,0,0,0.2);" id="sep">
       <div  class="container">
