major style and content changes

--- a/flowstress.html
+++ b/flowstress.html
@@ -54,11 +54,13 @@
 </style>
   </head>
 
-  <audio controls>
-  
+<div class="audio-player">
+ <audio controls align="right">
   <source src="assets/ryanjam.mp3" type="audio/ogg">
   </audio>
   <p style="font-size: 14px"><i>Soothing Ryan Libbey jams as you calculate flow stress (courtesy of PortPound Studios) </i></p>
+</div>
+  
   
   
  
@@ -89,45 +91,7 @@
         </div>
       </div><!--/row-->
 
-
-     
-      <!-- /END THE FEATURETTES -->
-
-
-
-<!--     <div class="container mt">
-        <div class="row clients centered">
-          <p class="mb"><strong>Seismic cycling in the brittle-plastic transition of a transform boundary, Pofadder Shear Zone, Namibia and South Africa</strong></p>
-          <div class="col-sm-4 ">
-            <h4>Coseismic deformation forms ultramylonite hosted “earthquake breccias”. Estimated rupture areas suggest nucleation within the transitional zone and Mw ~2 - 5 (Melosh et al., 2014). Breccia bodies form fluid pathways (Melosh et al., in final prep)</h4>
-            <br>
-            <img src="assets/img/portfolio/portfolio_01.png" alt="">
-          </div>
-          <div class="col-sm-4 ">
-            <h4>
-            Strain localization and changing deformation mechanisms during syn-tectonic exhumation. Quantifying regional differential exhumation (Melosh et al., in prep)</h4><br>
-            <img style="height:500px;" src="assets/img/portfolio/portfolio_02.png" alt="">
-          </div>
-          <div class="col-sm-4 ">
-            <h4>Active folding enhanced by grain size reduction during coseismic deformation feedbacks into the seismic cycle as a strengthening, delocalization mechanism (Melosh et al., in prep). </h4>
-
-            <img style="width:400px;height:400px;"src="assets/img/portfolio/portfolio_03.png" alt="">
-          </div>
-
-        </div><!--/row-->
-<!--       </div>
-      <!--/container--> 
-
-    <div style="background-color:rgba(0,0,0,0.2);" id="sep">
-      <div  class="container">
-        <div class="row centered">
-          <div class="col-md-8 col-md-offset-2">
-            
-            <button class="btn btn-conf btn-clear"><a href="mailto:bmelosh@usgs.gov?Subject=Potential%20Collaboration" target="_top">Let's Collaborate</a></button>
-          </div>
-        </div><!--/row-->
-      </div><!--/container-->
-    </div><!--/.sep-->
+  
 
     <div id="f">
       <div class="container">
