--- a/morefun.html
+++ b/morefun.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="assets/img/favicon.ico">
 
-    <title>Benji Da</title>
+    <title>Fun stuff</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -61,6 +61,15 @@
         outline: none;
     }
 
+    .col-md-8.col-md-offset-2 h1{
+      color:#C12909;
+    }
+
+    .test.test {
+      background-color: #000;
+      margin:0 auto;
+    }
+
 
 </style>
   </head>
@@ -68,9 +77,11 @@
 <body>
 
 
- <div class="container">
- 	<p><a href="flowstress.html">Flow Stress Calculator</p></a>
+ <div class="test test">
+  <div class="container">
+ 	<p><a href="flowstress.html">Flow Stress Calculator</a></p>
  	</div>
+ </div>
 
 
 
@@ -86,8 +97,8 @@
         <div class="row centered">
           <div class="col-md-8 col-md-offset-2">
             <h1>Fun stuff happens outside!</h1>
-            <br>
-            <button class="btn btn-conf btn-clear"><a href="mailto:bmelosh@usgs.gov?Subject=Potential%20Collaboration" target="_top">Let's Collaborate</a></button>
+            <!-- <br>
+            <button class="btn btn-conf btn-clear"><a href="mailto:bmelosh@usgs.gov?Subject=Potential%20Collaboration" target="_top">Let's Collaborate</a></button> -->
           </div>
         </div><!--/row-->
       </div><!--/container-->
