--- a/research.html
+++ b/research.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="assets/img/favicon.ico">
 
-    <title>Research</title>
+    <title>Ben Melosh Research</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -226,20 +226,9 @@
             <img style="width:400px;height:400px;"src="assets/img/portfolio/portfolio_03.png" alt="">
           </div>
 
-        </div><!--/row-->
-<!--       </div>
-      <!--/container--> 
+        </div>row-->
 
-    <div style="background-color:rgba(0,0,0,0.2);" id="sep">
-      <div  class="container">
-        <div class="row centered">
-          <div class="col-md-8 col-md-offset-2">
-            
-            <button class="btn btn-conf btn-clear"><a href="mailto:bmelosh@usgs.gov?Subject=Potential%20Collaboration" target="_top">Let's Collaborate</a></button>
-          </div>
-        </div><!--/row-->
-      </div><!--/container-->
-    </div><!--/.sep-->
+   <!--/.sep-->
 
     <div id="f">
       <div class="container">
@@ -252,8 +241,7 @@
 
             <a href="#"><i class="ion-social-instagram"></i></a>
             
-            <a href="https://scholar.google.com/citations?user=k6HaZgoAAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-3x"></i>
-</a>
+            <a href="https://scholar.google.com/citations?user=k6HaZgoAAAAJ&hl=en"><i class="ai ai-google-scholar-square ai-3x"></i></a>
           </div><!--/col-md-8-->
                   <a href="#">Contact me at benmelosh@gmail.com</i></a>
                   <a href="#">bmelosh@usgs.gov</i></a>
