--- a/publications.html
+++ b/publications.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="assets/img/favicon.ico">
 
-    <title>Benji Da</title>
+    <title>Ben Melosh Publications</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -29,6 +29,18 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 <style>
+  
+  p {
+    margin: 0 auto;
+  }
+
+  audio {
+    text-align: right;
+  }
+  h1 {
+    font-size: 60px;
+    font-weight: bold;
+  }
     .clients img {
     max-width: 400px;
     max-height: 200px;
@@ -37,8 +49,6 @@
     border-radius:10%;
     margin:10px;
     vertical-align: middle;}
-
-	
 
 	#colorstrip{
     width: 100%; height: 50px;
@@ -60,15 +70,27 @@
     color:#ffffff
   }
 
-
-
+  div.audio-player{
+    text-align: right;
+  }
+  div.single-pub {
+    padding:2px 2px 2px 2px;
+    text-align: justify;
+    margin-bottom: 20px;
+  }
+  div.single-pub:hover {
+    background:rgba(1,1, 1, 0.07);
+    border-radius: 10px;
+  }
 
 
 </style>
 
- <audio controls>
+<div class="audio-player">
+ <audio controls align="right">
   <source src="assets/ryanjam.mp3" type="audio/ogg">
   </audio>
+</div>
 
 </head>
 
@@ -76,30 +98,56 @@
 
 <div class="container" > 
 
-<p><a href="https://scholar.google.com/citations?user=k6HaZgoAAAAJ&hl=en" style="font-size:35px"><strong>Publications</strong></a></p><br>
+<p><a href="https://scholar.google.com/citations?user=k6HaZgoAAAAJ&hl=en"><h1>Publications</h1></a></p><br>
+
 <div class="mypublist">
-<p><a href="https://www.sciencedirect.com/science/article/pii/S0191814118301950" target="_blank"><b>Melosh, B.L.</b>, Rowe, C.D., Gerbi, C., Smit, L., Macey, P., 2018, Seismic cycle feedbacks in a mid-crustal shear zone, Journal of Structural Geology 112, 95-111</a></p><br>
-<p><a href="https://doi.org/10.1130/GES01398.1" target="_blank">Cathy J Busby, K Putirka, <b>Melosh, B.L.</b>, Paul R Renne, Jeanette C Hagan, Megan Gambs, Catherine Wesoloski, 2018, A tale of two Walker Lane pull-apart basins in the ancestral Cascades arc, central Sierra Nevada, California, Geosphere </a></p><br>
-<p><a href="http://www.sciencedirect.com/science/article/pii/S0191814116300360" target="_blank">Rupert Sutherland, John Townend, Virginia Toy, and <b>science team</b>, 2017, Extreme hydrothermal conditions at an active plate-bounding fault, Nature 546 (7656), 137</a></p><br>
-<p><a href="http://www.sciencedirect.com/science/article/pii/S0191814116300360" target="_blank"><b>Melosh, B.L.</b>, Rowe, C.D., Gerbi, C., Bate, C.E., Shulman, D., 2016, The spin zone: Transient mid-crust permeability caused by coseismic brecciation, Journal of Structural Geology 87, 47-63</a></p><br>
-<p><a href="http://geosphere.gsapubs.org/content/12/1/135.abstract?rss=1" target="_blank"> Busby, C.J., Andrews, G.D.M, Koerner, A.A, Brown, S.R., <b>Melosh, B.L.</b>, Hagan, J.C., 2016, Progressive derangement of ancient (Mesozoic) east-west Nevadaplano paleochannels into modern (Miocene–Holocene) north-northwest trends in the Walker Lane Belt, central Sierra Nevada, Geosphere 12 (1), 135-175</a></p><br>
-<p><a href="http://www.sciencedirect.com/science/article/pii/S0375650515000334" target="_blank"> Libbey, R.B., Williams-Jones, A.E., <b>Melosh, B.L.</b>, Backeberg, N.R., 2015, Characterization of geothermal activity along the North American–Caribbean Plate boundary in Guatemala: The Joaquina geothermal field, Geothermics 56, 17-34</a></p><br>
-<p><a href="http://www.sciencedirect.com/science/article/pii/S0012821X14004440" target="_blank"> <b>Melosh, B.L.</b>, Rowe, C.D., Smit, L., Groenewald, C., Lambert, C.W., Macey, P., 2014, Snap, Crackle, Pop: Dilational fault breccias record seismic slip below the brittle-plastic transition, Earth and Planetary Science Letters 403, 432-445</a></p><br>
-<p><a href="http://www.sciencedirect.com/science/article/pii/S0169555X12005855" target="_blank"> <b>Melosh, B.L.</b>, Keller, E.A., 2013, Effects of active folding and reverse faulting on stream channel evolution, Santa Barbara Fold Belt, California, Geomorphology 186, 119-135</a></p><br>
-<p><a href="http://geosphere.gsapubs.org/content/9/4/736.abstract" target="_blank"> Busby, C.J., Koerner, A.A., <b>Melosh, B.L.</b>, Hagan, J.C., Andrews, G.D.M., 2013, Sierra crest graben-vent system: A Walker Lane pull apart within the ancestral Cascades arc, Geosphere 9 (4), 736-780</a></p>
+  <div class="single-pub">
+    <p><a href="https://www.sciencedirect.com/science/article/pii/S0191814118301950" target="_blank"><b>Melosh, B.L.</b>, Rowe, C.D., Gerbi, C., Smit, L., Macey, P., 2018, Seismic cycle feedbacks in a mid-crustal shear zone, Journal of Structural Geology 112, 95-111</a></p>
+  </div>
+  <div class="single-pub">
+    <p><a href="https://doi.org/10.1130/GES01398.1" target="_blank">Cathy J Busby, K Putirka, <b>Melosh, B.L.</b>, Paul R Renne, Jeanette C Hagan, Megan Gambs, Catherine Wesoloski, 2018, A tale of two Walker Lane pull-apart basins in the ancestral Cascades arc, central Sierra Nevada, California, Geosphere </a></p>
+  </div>
+  <div class='single-pub'>
+    <p><a href="https://www.nature.com/articles/nature22355" target="_blank">Rupert Sutherland, John Townend, Virginia Toy, and <b>science team</b>, 2017, Extreme hydrothermal conditions at an active plate-bounding fault, Nature 546 (7656), 137</a></p>
+  </div>
+  <div class='single-pub'>
+    <p><a href="https://www.tandfonline.com/doi/abs/10.1080/00288306.2017.1375533" target="_blank">VG Toy, R Sutherland, J Townend, and <b>science team</b>, 2017, Bedrock geology of DFDP-2B, central Alpine Fault, New Zealand, New Zealand Journal of Geology and Geophysics 60 (4), 497-518</a></p>
+  </div>
+
+  <div class='single-pub'>
+    <p><a href="https://doi.org/10.1002/2017GC007202" target="_blank">J Townend, R Sutherland, VG Toy, and <b>science team</b>, 2017, Petrophysical, Geochemical, and Hydrological Evidence for Extensive Fracture‐Mediated Fluid and Heat Transport in the Alpine Fault's Hanging‐Wall Damage Zone, Geochemistry, Geophysics, Geosystems 18 (12), 4709-4732</a></p>
+  </div>
+  <div class='single-pub'>
+    <p><a href="http://www.sciencedirect.com/science/article/pii/S0191814116300360" target="_blank"><b>Melosh, B.L.</b>, Rowe, C.D., Gerbi, C., Bate, C.E., Shulman, D., 2016, The spin zone: Transient mid-crust permeability caused by coseismic brecciation, Journal of Structural Geology 87, 47-63</a></p>
+  </div>
+  <div class='single-pub'>
+    <p><a href="http://geosphere.gsapubs.org/content/12/1/135.abstract?rss=1" target="_blank"> Busby, C.J., Andrews, G.D.M, Koerner, A.A, Brown, S.R., <b>Melosh, B.L.</b>, Hagan, J.C., 2016, Progressive derangement of ancient (Mesozoic) east-west Nevadaplano paleochannels into modern (Miocene–Holocene) north-northwest trends in the Walker Lane Belt, central Sierra Nevada, Geosphere 12 (1), 135-175</a></p>
+  </div>
+  <div class='single-pub'>
+    <p><a href="http://www.sciencedirect.com/science/article/pii/S0375650515000334" target="_blank"> Libbey, R.B., Williams-Jones, A.E., <b>Melosh, B.L.</b>, Backeberg, N.R., 2015, Characterization of geothermal activity along the North American–Caribbean Plate boundary in Guatemala: The Joaquina geothermal field, Geothermics 56, 17-34</a></p>
+  </div>
+  <div class='single-pub'>
+    <p><a href="http://www.sciencedirect.com/science/article/pii/S0012821X14004440" target="_blank"> <b>Melosh, B.L.</b>, Rowe, C.D., Smit, L., Groenewald, C., Lambert, C.W., Macey, P., 2014, Snap, Crackle, Pop: Dilational fault breccias record seismic slip below the brittle-plastic transition, Earth and Planetary Science Letters 403, 432-445</a></p>
+  </div>
+  <div class='single-pub'>
+    <p><a href="http://www.sciencedirect.com/science/article/pii/S0169555X12005855" target="_blank"> <b>Melosh, B.L.</b>, Keller, E.A., 2013, Effects of active folding and reverse faulting on stream channel evolution, Santa Barbara Fold Belt, California, Geomorphology 186, 119-135</a></p>
+  </div>
+  <div class='single-pub'>
+    <p><a href="http://geosphere.gsapubs.org/content/9/4/736.abstract" target="_blank"> Busby, C.J., Koerner, A.A., <b>Melosh, B.L.</b>, Hagan, J.C., Andrews, G.D.M., 2013, Sierra crest graben-vent system: A Walker Lane pull apart within the ancestral Cascades arc, Geosphere 9 (4), 736-780</a></p>
+  </div>
 </div>
 </div>
 
-    <div style="background-color:rgba(0,0,0,0.2);" id="sep">
+ <!--    <div style="background-color:rgba(0,0,0,0.2);" id="sep">
       <div  class="container">
         <div class="row centered">
           <div class="col-md-8 col-md-offset-2">
           
             <button class="btn btn-conf btn-clear"><a href="mailto:bmelosh@usgs.gov?Subject=Potential%20Collaboration" target="_top">Let's Collaborate</a></button>
-          </div>
-        </div><!--/row-->
-      </div><!--/container-->
-    </div><!--/.sep-->
+          </div> -->
+        <!-- </div> --><!--/row-->
+      <!-- </div> --><!--/container-->
+    <!-- </div> --><!--/.sep-->
 
     <div id="f">
       <div class="container">
