--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
     #h{
       margin-top: -10px;
+      background-position: 0% 20%;
     }
 
   	div.transbox { 
@@ -99,6 +100,10 @@
       margin-top:10px;
     }
 
+    .col-md-8.col-md-offset-2 {
+      color:black;
+    }
+
     img {
       height:250px;
       width:150px;
@@ -116,6 +121,31 @@
     }
     li {
       display: inline;
+    }
+
+    @media (max-width: 500px){
+      li {
+        display: block;
+      }
+      .col-md-8.col-md-offset-2 h1{
+        font-size:25px;
+      }
+      .container li{
+        font-size: 30px;
+      }
+      .dropdown:hover .dropdown-content {
+        display:block;
+        margin-left: 100px;
+      }
+      #h {
+        max-width:100%;
+        background-position: 70% 100%;
+      }
+      #h .figcap h2{
+        top:116%;
+        left: 42%;
+        font-size: 15px;
+      }
     }
     
 </style>
@@ -170,19 +200,18 @@
 
       <!-- <img src="./assets/img/face.png" >
  -->
-      <div class="container centered" style="padding:100px 0px;"">
+      <div class="container centered" style="padding:100px 0px;">
         <div class="row">
-          <div class="col-md-8 col-md-offset-2" style="color:black; font-size:40px">
+          <div class="col-md-8 col-md-offset-2">
             <h1><b>Benjamin L. Melosh, Ph.D.</b><br/>Structural Geologist</h1>
           </div>
         </div><!--/row-->
       </div><!--/container centered-->
-<!-- 
-      <div class="row">
-        <div class="col-md-12" >
-          <p style="color:white">Pofadder Shear Zone, South Africa</p>
-        </div>
-      </div> -->
+
+    <div class="figcap">
+      <h2>Pofadder Shear Zone, South Africa</h2>
+    </div>
+    
 
     </div> <!-- #h (the picture)-->
   </header>
