--- a/index.html
+++ b/index.html
@@ -184,7 +184,10 @@
       <li><div class="dropdown">
           <span><strong>Maps</span>
           <div class="dropdown-content">
-            <p><a href="https://benjida.github.io/North-coast-earthquake-map/">Northern California Earthquakes</p></a>
+            <p><a href="Cow_mountain_eq.html">Northern California Earthquakes</p></a>
+          </div>
+          <div class="dropdown-content">
+            <p><a href="https://benjida.github.io/North-coast-earthquake-map/">Cow mountain</p></a>
           </div>
           </div>
       </li>
