--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
           <span><strong>Maps</span>
           <div class="dropdown-content">
             <p><a href="https://benjida.github.io/North-coast-earthquake-map/">Northern California Earthquakes</p></a>
+            <p><a href="cow_mountain_eq2.html">Cow Mountain 3D</p></a>
           </div>
           </div>
       </li>
