--- a/cow_mountain_eq2.html
+++ b/cow_mountain_eq2.html
@@ -4,13 +4,13 @@
 <meta charset="UTF-8">
 <title>cow_mountain_eq2</title>
 <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-<link rel="stylesheet" type="text/css" href="./Qgis2threejs.css">
-<script src="./threejs/three.min.js"></script>
-<script src="./threejs/OrbitControls.js"></script>
+<link rel="stylesheet" type="text/css" href="./assets/css/Qgis2threejs.css">
+<script src="./assets/js/three.min.js"></script>
+<script src="./assets/js/OrbitControls.js"></script>
 
-<script src="./dat-gui/dat.gui.min.js"></script>
-<script src="./Qgis2threejs.js"></script>
-<script src="./dat-gui_panel.js"></script>
+<script src="./assets/js/dat.gui.min.js"></script>
+<script src="./assets/js/Qgis2threejs.js"></script>
+<script src="./assets/js/dat-gui_panel.js"></script>
 </head>
 <body>
 <div id="view">
