--- a/publications.html
+++ b/publications.html
@@ -102,6 +102,9 @@
 
 <div class="mypublist">
   <div class="single-pub">
+    <p><a href="https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2018GC008092" target="_blank"><b>Melosh, B.L.</b>, 2019, Fault initiation in serpentinite, Geochemistry, Geophysics, Geosystems 20 (6), 2626-2646</a></p>
+  </div>
+  <div class="single-pub">
     <p><a href="https://www.sciencedirect.com/science/article/pii/S0191814118301950" target="_blank"><b>Melosh, B.L.</b>, Rowe, C.D., Gerbi, C., Smit, L., Macey, P., 2018, Seismic cycle feedbacks in a mid-crustal shear zone, Journal of Structural Geology 112, 95-111</a></p>
   </div>
   <div class="single-pub">
