--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <span><strong>Maps</span>
           <div class="dropdown-content">
             <p><a href="cow_mountain_eq2.html">Cow Mountain 3D</p></a>
-            <p><a href="Putah_creek.html">Putah Creek 3D</p></a>
+            <!-- <p><a href="Putah_creek.html">Putah Creek 3D</p></a> -->
             <p><a href="https://benjida.github.io/North-coast-earthquake-map/" target="_blank">Northern California Earthquakes</p></a>
           </div>
           </div>
@@ -203,7 +203,7 @@
     </ul>
 
     <div id="h">
-      <div class="container centered" style="padding:10px 0px;">
+      <div class="container centered" style="padding:100px 0px;">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h1><b>Benjamin L. Melosh, Ph.D.</b><br/>Structural Geologist</h1>
