update index for new graph

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
           <div class="dropdown-content">
             <p><a href="morefun.html">Fun Stuff</p></a>
             <p><a href="https://benmelosh.bandcamp.com/" target="_blank">Music</p></a>
+            <p><a href="Covid-in-bay-area.html">Not so fun</p></a>
           </div>
           </div>
       </li>
