--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       position: relative;
       display: inline-block;
       padding: 0px 30px;
+      z-index: 9999;
     }
 
     .dropdown-content {
