--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
       padding: 12px 16px;
       border-radius: 10px;
+      z-index: 9999;
 
     }
 
