updating and adding new graphs

--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
           <div class="dropdown-content">
             <p><a href="morefun.html">Fun Stuff</p></a>
             <p><a href="https://benmelosh.bandcamp.com/" target="_blank">Music</p></a>
-            <p><a href="Covid-in-bay-area.html">Not so fun</p></a>
+            <p><a href="Covid-in-bay-area.html">Covid semi log</p></a>
+            <p><a href="Covid-bar.html">Covid bar chart</p></a>
           </div>
           </div>
       </li>
