add putah creek model

--- a/Putah_creek.html
+++ b/Putah_creek.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>index</title>
+<title>Putah Creek 3D</title>
 <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 <link rel="stylesheet" type="text/css" href="./assets/css/Qgis2threejs.css">
 <script src="./assets/js/three.min.js"></script>
@@ -103,7 +103,7 @@ var app = Q3D.application,
 app.init(container);           // initialize application
 
 // load the scene
-app.loadJSONFile("./data/index/scene.json", function () {
+app.loadJSONFile("./assets/data/Putah_creek/scene.json", function () {
   app.start();
 
   // North arrow inset
