--- a/Putah_creek.html
+++ b/Putah_creek.html
@@ -90,10 +90,12 @@
 
 <!-- header and footer -->
 <div id="header"></div>
-<div id="footer"><span id="infobtn"><img src="./Qgis2threejs.png"></span> </div>
+<div id="footer"><!-- <span id="infobtn"><img src="./Qgis2threejs.png"></span> </div> -->
 
 <script>
-Q3D.Config.allVisible = true;
+// Q3D.Config.allVisible = true;
+Q3D.Config.northArrow.visible = true;
+Q3D.Config.northArrow.color = 0x797979;
 
 if (typeof proj4 === "undefined") document.getElementById("lib_proj4js").style.display = "none";
 
@@ -102,9 +104,20 @@ var app = Q3D.application,
 
 app.init(container);           // initialize application
 
+// when all relevant files have been loaded into the scene
+app.addEventListener("sceneLoaded", function () {
+  // set custom plane z range
+  var box = new THREE.Box3().setFromObject(app.scene),
+      zMin = app.scene.toMapCoordinates(0, 0, box.min.y).z,
+      zMax = app.scene.toMapCoordinates(0, 0, box.max.y).z;
+  Q3D.gui.initCustomPlaneFolder(zMin, zMax);
+});
+
 // load the scene
 app.loadJSONFile("./assets/data/Putah_creek/scene.json", function () {
   app.start();
+
+  Q3D.gui.init();   // initialize dat-gui panel
 
   // North arrow inset
   if (Q3D.Config.northArrow.visible) app.buildNorthArrow(document.getElementById("northarrow"), app.scene.userData.rotation);
