update index, add favicon

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       </div><!--/container centered-->
 
       <span class="col-md-offset-10">
-        <h3>Pofadder Shear Zone, South Africa</h3>
+        <h3>Geysers steam field at sunset, Northern California Coast Ranges</h3>
       </span>
     </div> <!-- #h (the picture)-->
 
@@ -258,7 +258,7 @@
 
             <a href="https://github.com/BenjiDa" target="_blank"><i class="ion-social-github"></i></a>
             
-            <a href="https://scholar.google.com/citations?user=k6HaZgoAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square ai-3x"></i></a>
+            <a href="https://scholar.google.com/citations?user=8ijDU1MAAAAJ&hl=en" target="_blank"><i class="ai ai-google-scholar-square ai-3x"></i></a>
           </div><!--/col-md-8-->
                   <a href="#">Contact me at: benmelosh@gmail.com</i></a>
                   <a href="#">bmelosh@usgs.gov</i></a>
