--- a/index.html
+++ b/index.html
@@ -206,18 +206,19 @@
       </li>
     </ul>
 
-    <div id="h">
+    <!-- <div id="h">
       <div class="container centered" style="padding:100px 0px;">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h1><b>Benjamin L. Melosh, Ph.D.</b><br/>Structural Geologist</h1>
           </div>
-        </div><!--/row-->
-      </div><!--/container centered-->
-
-      <span class="col-md-offset-10">
-        <h3>Geysers steam field at sunset, Northern California Coast Ranges</h3>
-      </span>
+        </div> --><!--/row-->
+      <!-- </div> --><!--/container centered-->
+      <div id="h">
+        <span class="col-md-offset-10">
+          <h3>Geysers steam field at sunset, Northern California Coast Ranges</h3>
+        </span>
+      </div>
     </div> <!-- #h (the picture)-->
 
 
