update text box

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           </div>
         </div> --><!--/row-->
       <!-- </div> --><!--/container centered-->
-      <div id="h">
+      <div class="container centered">
         <span class="col-md-offset-10">
           <h3>Geysers steam field at sunset, Northern California Coast Ranges</h3>
         </span>
