--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
       </li>
 
       <li><div class="dropdown">
-          <span><strong>More</span>
+          <span><strong>Tools</span>
           <div class="dropdown-content">
-            <p><a href="morefun.html">Fun Stuff</p></a>
+            <p><a href="flowstress.html">Flowstress calculator</p></a>
             <p><a href="https://benmelosh.bandcamp.com/" target="_blank">Music</p></a>
             <p><a href="Covid-in-bay-area.html">Covid semi log</p></a>
             <p><a href="Covid-bar.html">Covid bar chart</p></a>
@@ -214,17 +214,17 @@
           </div>
         </div> --><!--/row-->
       <!-- </div> --><!--/container centered-->
-      <div class="container centered">
-        <span class="col-md-offset-10">
-          <h3>Geysers steam field at sunset, Northern California Coast Ranges</h3>
-        </span>
+      <div id="h">
+        <!-- <div class="container"> -->
+        <!-- <div id="header content"> -->
+          <!-- <div class="col-md-offset-6"> -->
+            <!-- <h3>Geysers steam field at sunset, Northern California Coast Ranges</h3> -->
+          <!-- </div> -->
+        <!-- </div> -->
+      <!-- </div> -->
       </div>
     </div> <!-- #h (the picture)-->
 
-
-
-    
-  
   </header>
 
       <div style='background-color: #1381C8'>
