--- a/index.html
+++ b/index.html
@@ -206,23 +206,23 @@
       </li>
     </ul>
 
-    <!-- <div id="h">
-      <div class="container centered" style="padding:100px 0px;">
-        <div class="row">
+     <div id="h">
+     <!--  <div class="container centered" style="padding:100px 0px;"> -->
+        <!-- <div class="row">
           <div class="col-md-8 col-md-offset-2">
             <h1><b>Benjamin L. Melosh, Ph.D.</b><br/>Structural Geologist</h1>
           </div>
-        </div> --><!--/row-->
-      <!-- </div> --><!--/container centered-->
+        </div>  -->
+      <!-- </div> --><!--/container centered
       <div id="h">
-        <!-- <div class="container"> -->
+         <div class="container"> -->
         <!-- <div id="header content"> -->
           <!-- <div class="col-md-offset-6"> -->
             <!-- <h3>Geysers steam field at sunset, Northern California Coast Ranges</h3> -->
           <!-- </div> -->
         <!-- </div> -->
       <!-- </div> -->
-      </div>
+      <!-- </div> -->
     </div> <!-- #h (the picture)-->
 
   </header>
