--- a/California_geology.html
+++ b/California_geology.html
@@ -52,7 +52,7 @@
 
 // Mapbox map geologic map and active fault map slider.
 //
-
+mapboxgl.accessToken = 'pk.eyJ1IjoiYm1lbG9zaCIsImEiOiJjamw0N2lnenYwNTd1M2tubHNneG0ydHFpIn0.MxTNGVxi4sJytIpjajrHCg';
 
 // Create active fault map
 var beforeMap = new mapboxgl.Map({
